<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tietNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hNombreCompleto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/llFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tietNombreCompleto"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/custom_linear_background"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lFechaNacimiento"
            android:gravity="center_horizontal"
            android:background="@drawable/custom_linear_background"
            android:textSize="20sp"/>
        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal">

        </DatePicker>
    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tietTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hTelefono"
        app:layout_constraintTop_toBottomOf="@id/llFechaNacimiento"
        android:layout_margin="4dp"
        android:inputType="phone"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tietEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hEmail"
        app:layout_constraintTop_toBottomOf="@id/tietTelefono"
        android:layout_margin="4dp"
        android:inputType="textEmailAddress"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tietDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hDescripcionContacto"
        app:layout_constraintTop_toBottomOf="@id/tietEMail"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/bSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/lBotonSiguiente"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="siguienteActividad"
        />

</android.support.constraint.ConstraintLayout>